# helscoop

./: .env.example  .gitignore  API.md  ARCHITECTURE_AS_CODE_PLAN.md  CMakeLists.txt  COLOR_API_DESIGN.md  IMPLEMENTATION_PLAN.md  README.md  THERMAL_PLAN.md  TODO.md  coop.js  docker-compose.yml  perf_test.sh  run.sh  scene.js  test_front_wall.js  test_nest_alignment.js  test_nest_cutout_detail.js
.github/workflows/: ci.yml
api/: .dockerignore  Dockerfile  package-lock.json  package.json
api/src/: audit.ts  auth.ts  building-info.ts  collaboration.ts  csrf.ts  db.ts  email.ts  energy-class.ts  entitlements.ts  ifc-generator.ts  index.ts  kesko-client.ts  logger.ts  maintenance-schedules.ts  material-trends.ts  notifications.ts  permissions.ts  permit-pack.ts  price-alerts.ts  project-image-storage.ts  push.ts  room-scan-parser.ts  ryhti-client.ts  secrets.ts  session-cookie.ts  statfin-cost-index.ts  waste-factors.ts
assemblies/: CanopyPicoHolder.js  CorneAssembly.js  DoubleToFHolder.js  MTF02PGuard.js  MultiSensorHoist.js  SingleDstmSleeve.js
data/: geocode.ts
data/demo/: helsinki-metro-curated.json  ribbingintie-109.json  uunimaentie-1.json
db/: migrate.ts
db/migrations/: 001_initial_schema.sql  002_seed_from_json.sql  003_add_material_images.sql  004_password_reset.sql  005_schema_migrations.sql  006_accepted_terms.sql  (+35 more)
deploy/: fly.api.toml  fly.web.toml
docs/: WALL_API.md  ops-runbook.md
e2e/: package-lock.json  package.json  playwright.config.ts  playwright.e2e.config.ts
materials/: materials.json  validate-catalog.ts
scraper/: .dockerignore  Dockerfile  package-lock.json  package.json  tsconfig.json
scripts/: archdoc_shots.tsv  generate-architecture-doc.sh  load-test.mjs  sync-materials.sh  test-render.sh
tests/: run_tests.sh  test_param_update.sh  test_wall.js  test_wall_advanced.js  test_wall_stickframe.js
viewer/: CMakeLists.txt  assembly.cpp  assembly.h  blueprint_export.cpp  blueprint_export.h  climate_data.cpp  climate_data.h  file_utils.cpp  file_utils.h  ifc_export.cpp  ifc_export.h  js_bindings.cpp  main.cpp  material_loader.cpp  material_loader.h  mesh_utils.cpp  mesh_utils.h  scene_loader.cpp  scene_loader.h  shaders.h  structural.cpp  structural.h  thermal.cpp  thermal.h  thermal_area.h  types.h  ui_panels.cpp  ui_panels.h
viewer/primitives/: wall.cpp  wall.h
web/: .dockerignore  Dockerfile  next.config.js  package-lock.json  package.json  sentry.client.config.ts  sentry.server.config.ts  vitest.config.ts
(+525 files in other folders)
